containers/gitea-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: gitea-testing
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:5.0.4
        command:
        - redis-server
        - "/redis-master/redis.conf"
        ports:
        - containerPort: 6379
        resources:
          limits:
            cpu: "0.1"
        volumeMounts:
        - mountPath: /redis-master-data
          name: data
        - mountPath: /redis-master
          name: config
      volumes:
      - name: data
        emptyDir: {}
      - name: config
        configMap:
          name: example-redis-config
          items:
          - key: redis-config
            path: redis.conf
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: gitea-testing
  labels:
    app: redis
spec:
  ports:
  - port: 6379
  selector:
    app: redis
