containers/gitea.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea-testing
  labels:
    app: gitea
spec:
  ports:
    - protocol: TCP
      port: 3000
      nodePort: 30339
  selector:
    app: gitea
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea-testing
  labels:
    app: gitea
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gitea
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - image: tsilyk/gitea-server:latest
        name: gitea
        ports:
        - containerPort: 3000
          name: gitea
        volumeMounts:
        - name: gitea-persistent-storage
          mountPath: /va/lib/gitea
      volumes:
      - name: gitea-persistent-storage
        persistentVolumeClaim:
          claimName: gitea-pv-claim
