containers/gitea-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-virtual-host-ingress
  namespace: gitea-testing
spec:
  rules:
  - host: testgitea.eq.org.ua
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gitea
            port:
              number: 3000
